# you-ai-website-builder

./: .gitignore  DESIGN.md  DEVELOPMENT.md  README.md
.github/workflows/: build-release.yml  ci.yml
app/: package-lock.json  package.json
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: cloudflare.rs  commands.rs  credentials.rs  github.rs  lib.rs  llm.rs  main.rs  scraper.rs
app/src/pages/: Dashboard.tsx  Editor.tsx  SetupWizard.tsx
