[package]
name = "you-ai-website-builder"
version = "0.1.0"
description = "You AI Website Builder - Describe it. We'll build it."
authors = ["You AI"]
edition = "2021"

[lib]
name = "you_ai_website_builder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
url = "2"
dirs-next = "2"
